fix column alignment on home page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,22 +48,20 @@ input, textarea {
   padding: .25em;
 }
 
+.sp-btwn{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
 .goal-list{
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: rgb(149, 199, 213);
   font-size: 2em;
-  width: 80%;
   margin: 1em;
   padding: .5em;
-}
-
-.sp-btwn{
-  width: 100%;
-  display:flex;
-  flex-direction: row;
-  justify-content: space-around;
 }
 
 .row{
